--- a/deepLinkService.html
+++ b/deepLinkService.html
@@ -15,15 +15,15 @@
     var alternateUrl = "https://play.google.com/store/apps/details?id=com.medpresso.testzapp.crnclex_rn";
 
     function handleUriOpening() {
-        try {
-            console.log("inside try block");
+            console.log("before process");
             window.location.href = customUri;
-        } catch (error) {
-            window.location.href = alternateUrl;
-            console.log("inside catch block")
+            setTimeout(function() {
+                window.location.href = alternateUrl;
+            }, 3000);
+            console.log("after timeout")
             console.error("Error opening custom URI:", error);
         }
-    }
+        
     handleUriOpening();
     </script>
 </body>
