--- a/deepLinkService.html
+++ b/deepLinkService.html
@@ -18,18 +18,23 @@ function openCustomScheme() {
     console.log("inside openCustomeScheme");
     window.location.href = customUri;
     console.log("inside after openCustomeScheme")
+    console.log(window.location.href+"inside open custom scheme");
+
 }
 
 function redirectToPlayStore() {
     console.log("inside redirect to play store")
+    console.log(window.location.href+"inside open redirect to play store");
     window.location.href = alternateUrl;
     console.log("inside redirect  to play store");
 }
     openCustomScheme();
 
     setTimeout(function() {
-        if (window.location.href.indexOf('com.medpresso.testzapp') === 0) {
+        console.log(window.location.href+"inside open timeout function");
+        if (window.location.href === customUri) {
             console.log("inside true condition");
+            console.log(window.location.href+"inside open true condition");
             redirectToPlayStore();
         }
     }, 10000);
